src/ui/readarr_ui/root_folders/snapshots/managarr__ui__readarr_ui__root_folders__add_root_folder_ui__add_root_folder_ui_tests__tests__snapshot_tests__add_root_folder_AddRootFolderConfirmPrompt.snap
---
source: src/ui/readarr_ui/root_folders/add_root_folder_ui_tests.rs
expression: output
---
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                            ╭───────────────────────────────────────────  Add Root Folder  ───────────────────────────────────────────╮                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │                                                  ╭─────────────────────────────────────────────────╮    │                              
                            │                                            Name: │Test Root Folder                                 │    │                              
                            │                                                  ╰─────────────────────────────────────────────────╯    │                              
                            │                                                  ╭─────────────────────────────────────────────────╮    │                              
                            │                                            Path: │/nfs/books                                       │    │                              
                            │                                                  ╰─────────────────────────────────────────────────╯    │                              
                            │                                                  ╭─────────────────────────────────────────────────╮    │                              
                            │                                         Monitor: │All Books                                      ▼ │    │                              
                            │                                                  ╰─────────────────────────────────────────────────╯    │                              
                            │                                                  ╭─────────────────────────────────────────────────╮    │                              
                            │                               Monitor New Books: │All Books                                      ▼ │    │                              
                            │                                                  ╰─────────────────────────────────────────────────╯    │                              
                            │                                                  ╭─────────────────────────────────────────────────╮    │                              
                            │                                 Quality Profile: │eBook                                          ▼ │    │                              
                            │                                                  ╰─────────────────────────────────────────────────╯    │                              
                            │                                                  ╭─────────────────────────────────────────────────╮    │                              
                            │                                Metadata Profile: │Author Only                                    ▼ │    │                              
                            │                                                  ╰─────────────────────────────────────────────────╯    │                              
                            │                                                  ╭─────────────────────────────────────────────────╮    │                              
                            │                                            Tags: │test                                             │    │                              
                            │                                                  ╰─────────────────────────────────────────────────╯    │                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │╭───────────────────────────────────────────────────╮╭──────────────────────────────────────────────────╮│                              
                            ││                       Save                        ││                      Cancel                      ││                              
                            │╰───────────────────────────────────────────────────╯╰──────────────────────────────────────────────────╯│                              
                            ╰─────────────────────────────────────────────────────────────────────────────────────────────────────────╯
